# agent-build

./: APPLICATION_ANALYSIS_REPORT.md  DEPLOYMENT_TEST_REPORT.md  ENTERPRISE_SETUP_README.md  README.md  SETUP_GUIDE.md  agent_build_standalone_analysis.md  code_quality_analysis_report.md  enterprise_setup.py  quick_start.sh
edda/edda_forge/: Cargo.toml  README.md  forge-command.md  forge.toml
edda/edda_forge/examples/pure_forge_todo/: README.md  forge-base.toml  run.sh
edda/edda_forge/src/: config.rs  container.rs  local.rs  main.rs  runner.rs  state.rs
edda/edda_forge/template/: Cargo.toml
edda/edda_forge/template/benches/: bench.rs
edda/edda_forge/template/src/: lib.rs
klaudbiusz/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
klaudbiusz/cli/: analyze_trajectories.py  bulk_run.py  codegen.py  codegen_multi.py  eval_metrics.py  evaluate_all.py  evaluate_app.py  evaluate_app_dagger.py  mlflow_tracker.py  setup.py  shared.py  trajectory.py
klaudbiusz/cli/evaluation/: __init__.py  eval_agent.py  evaluate_all.py  evaluate_app.py  evaluate_app_dagger.py  evaluate_app_docker.py  tracking.py
klaudbiusz/cli/generation/: bulk_run.py  codegen.py  codegen_multi.py  container_runner.py  dagger_run.py  local_bulk_run.py  local_run.py  output.py  screenshot.py  single_run.py
klaudbiusz/cli/generation_opencode/: package.json
klaudbiusz/cli/prompts/: __init__.py
klaudbiusz/cli/utils/: apps_discovery.py  dagger_utils.py  docker_workspace.py  mlflow_tracker.py  shared.py  template_detection.py  ts_workspace.py  ts_workspace_docker.py
(+67 files in other folders)
