[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cli"]

[project]
name = "klaudbiusz"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fire>=0.7.1",
    "coloredlogs>=15.0.1",
    "asyncpg>=0.30.0",
    "python-dotenv>=1.0.0",
    "tqdm>=4.66.0",
    "anthropic>=0.40.0",
    "mlflow>=2.15.0",
    "databricks-sdk>=0.70.0",
    "claude-agent-sdk>=0.1.6",
    "dagger-io>=0.18.16",
    "tenacity>=9.1.2",
    "opentelemetry-exporter-otlp-proto-grpc>=1.38.0",
    "nest-asyncio>=1.6.0",
]

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py312"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pyright]
venvPath = "."
venv = ".venv"

[dependency-groups]
dev = [
    "pdbpp>=0.11.7",
    "pyright>=1.1.406",
    "ruff>=0.14.3",
]
